--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-cdk-lib": "^2.190.0",
     "constructs": "^10.4.2",
     "next": "15.3.1",
+    "next-intl": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sst": "^2.48.5"
